--- a/note.html
+++ b/note.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>A Simple Webpage</title>
+		<title>Git Bash Webpage</title>
 	</head>
 	<body>
 		<h1>Hello from Git Bash!</h1>
