added another paragraph

--- a/note.html
+++ b/note.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<h1>Hello from Git Bash!</h1>
-		<p>This is a simple webpae created using Git Bash.</p>
+		<p>This is a simple webpage created using Git Bash.</p>
+		<p>This is another paragraph added in the new-section branch.</p>
 	</body>
 </html>
